# plugin-architecture

./: Readme.md
myproject-plugin1/: pyproject.toml
myproject-plugin1/myproject_plugin1/: plugin.py
