[tool.poetry]
name = "myproject_plugin1"
version = "0.1.1"
description = "Example of plugin package in python"
authors = ["Jean-Baptiste Poullet <jeanbaptistepoullet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
myproject = {path = "../myproject-core/", develop = false}

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[tool.poetry.plugins."myproject.plugins"]
"plugin1" = "myproject_plugin1.plugin:MyPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
